# dev

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .lefthook.toml  .lefthook.yaml  .mise.toml  .tombi.toml  LICENSE  README.md  deno.jsonc  dev.toml  index.d.ts  index.js  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  util.js  vite.config.ts
.zed/: settings.json
assets/: github-pages-deploy.yaml
commands/: changelog.ts  install.ts  lint.ts  new.js  new.ts  repos.ts  start-server.ts  task.js  task.ts  version.ts
config/: .browserslistrc  .clang-format  .clang-tidy  .commitlintrc.json  .ls-lint.yml  .markuplintrc.json  .postcssrc.mjs  .stylelintrc.json  .yamllint.yaml  .yamllint2.yaml  common.js  common.ts  dev.service  eslint.config.js  gh-actions-bash-lint.yaml  java-format.xml  vscode-config.jsonc  vscode-tool-disable.jsonc  vscode-tool-enable.jsonc  zed-config.jsonc  zed-tool-disable.jsonc  zed-tool-enable.jsonc
config/templates/cpp/cpp-cmake/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
config/templates/cpp/cpp-cmake/config/: book-organizer.desktop
dev-server/: server.js  server.ts  start.ts
devserver/: server.ts  start.ts  vite.config.ts  webframework.md  webframework.ts
devserver/pages/: lint.ts  (+11 more)
devutils/: deno.json  index.ts
docs/: fix.md  index.md
documentation/: fix.md  new.md
export/: export.js
fix/: fix.js  rules.js  util.js
inits/: go.js  index.js  javascript.js  rust.js
new/: new.js  util.js
script/: script.js
source/: start-server.js
src/: .new.js.kate-swp  _export.js  export-update-and-push-templates.js  export.js  fix.js  install.js  lint.js  new.js  repos.js  script.js  start-server.js  task.js  util.js
test/: test.js
util/: dependencies.js  octokit.js  rules.js  util.js
utilities/: db.ts  mergetoml.py  prompt.ts  repositories.js  repositories.ts  util.ts
utility/: repositories.ts
(+375 files in other folders)
